8.3.6 (02-06-2022)
- Refactor: Return code of PersonCustomer from Customer::getCode instead of externalId

8.3.5 (17-05-2022)
- Bug Fix: Fix personal email field in debt report

8.3.4 (02-05-2022)
- Improvement: Add reimbursement state in reimbursements report
- Improvement: Add more fields to treasury exemption reports
- Improvement: Report debt account with customer code
- Bug Fix: Allow parametrization of tuition payment plans in one finantial entity, given degree curricular plan and execution year
- Bug Fix: Remove erroneous and misleading method TuitionPaymentPlan::finantialEntity. TuitionPaymentPlan already associates to Finantial Entity

8.3.3 (22-04-2022)
- Bug Fix: Use VAT find with current dateTime, instead of the debt date

8.3.2 (13-04-2022)
- Refactor: Read label from bundle in static block, to catch and print any errors that might occur (#UL-FC-3159)
- Refactor: Declare method to get Customer::code attribute from PersonCustomer. This method is just to check that codes are set right 

8.3.1 (17-03-2022)
- Bug Fix: Throw exception with the error description, when a value cannot be translated in tuition payment plan rule condition

8.3.0 (16-03-2022)
- Refactor: Mark ExemptionsGenerationRowResult::exemptedAmount as deprecated and replace with ExemptionsGenerationRowResult::netExemptedAmount
- Improvement: Global setting to enable/disable academic debt generation rules periodic execution
- Improvement: Support callbacks for each academic debt generation rule execution. An example of callback is the progress bar to trigger the execution in UI
- Improvement: Filter execution of academic debt generation rules, by type and execution year

8.2.5 (07-03-2022)
- Bug fix: Remove RC module version dependency
- Refactor: Mark TreasuryExemption::valueToExempt as deprecated and replace with TreasuryExemption.netAmountToExempt
- Refactor: Mark DebitEntry::exemptedAmount as deprecated and replace with DebitEntry::netExemptedAmount

8.2.4 (19-02-2022)